--- a/data-engineer.html
+++ b/data-engineer.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/tXu5qHO0PW/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
+<h5><a href='http://levelset.applytojob.com/apply/tXu5qHO0PW/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Mumbai  Mumbai</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698173551-data-engineer'>KSM Consulting Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698173551-data-engineer'>KSM Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -244,7 +244,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Oakland, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -252,7 +252,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Manager-Data-Engineering'>Manager, Data Engineering - Assembly - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Manager-Data-Engineering'>Manager, Data Engineering - Assembly - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -362,7 +362,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
+<h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -427,7 +427,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Santa Clara, California  California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aofl/29f56b08-0f14-4b64-86e7-8904a82f956e'>Age of Learning  - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aofl/29f56b08-0f14-4b64-86e7-8904a82f956e'>Age of Learning  - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Glendale, CA  California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -447,7 +447,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4488773002'>Job Application for Informatics Data Engineer at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4488773002'>Job Application for Informatics Data Engineer at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
