--- a/data-analyst.html
+++ b/data-analyst.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/6sense/jobs/1931412'>Job Application for Data Analyst at 6sense</a></h5> 
+<h5><a href='https://boards.greenhouse.io/6sense/jobs/1931412'>Job Application for Data Analyst at 6sense</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -87,7 +87,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nNHSmMwZ'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
     Data Analyst - SEM at doxo
 </a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -187,7 +187,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698271162-statistical-programmer'>Biogen Statistical Programmer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -211,7 +211,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/themergermarketgroup/job/oTypbfwL'>Acuris Careers - Part-Time Market Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/themergermarketgroup/job/oTypbfwL'>Acuris Careers - Part-Time Market Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light">France France  France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/jr31mcp4y7cz98ip85tumxbeny'>Data Analyst | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/jr31mcp4y7cz98ip85tumxbeny'>Data Analyst | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -240,7 +240,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/9LZKEhjIxX/Robotics-Data-Analyst'>Robotics Data Analyst - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/9LZKEhjIxX/Robotics-Data-Analyst'>Robotics Data Analyst - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -250,7 +250,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -319,7 +319,7 @@ organization?...</p>
 <p><span class="badge badge-light">North America North America Tennessee  North America</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/larkhealth/jobs/4478137002'>Job Application for Senior Data Analyst at Lark Health</a></h5> 
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -357,7 +357,7 @@ organization?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/o/internship-data-analyst-spain'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/o/internship-data-analyst-spain'>
       Internship Data Analyst (Spain) - Helloprint
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -410,7 +410,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/fraud-data-analyst-27450'>Fraud Data Analyst - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/fraud-data-analyst-27450'>Fraud Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -432,7 +432,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -510,7 +510,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
